# mailgen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
mailgen/: __init__.py  generator.py
mailgen/common/: app_services.py  app_typing.py  app_utilities.py  constants.py  exceptions.py  gui_operations.py  os_services.py
