[tool.poetry]
name = "protonmailgenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "mailgen"},
]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.2.0"
pyscreeze = "0.1.28"
pyautogui = "0.9.53"
certifi = "^2023.11.17"
idna = "^3.6"
urllib3 = "^2.1.0"
opencv-contrib-python = "^4.9.0.80"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.12.1"
xenon = "^0.9.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
mypy = "^1.8.0"
wemake-python-styleguide = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''
include_trailing_comma = true